--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -40,22 +40,27 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="list-container">
-            <form method="post" id="maxCountForm" class="top">
+            <div class="top">
                <div class="left">
-                  <select asp-for="MaxCount" class="drop-main" onchange="updateMaxCount(this.value)">
-                     <option value="10">10</option>
-                     <option value="25">25</option>
-                     <option value="50">50</option>
-                  </select>
-                  @if (Model.Detailed) {
-
-                  }
+                  <form method="post">
+                     <select asp-for="MaxCount" class="drop-main" onchange="this.form.submit()">
+                        <option value="10">10</option>
+                        <option value="25">25</option>
+                        <option value="50">50</option>
+                     </select>
+                  </form>
                </div>
                <div class="right">
-                  <input asp-for="Detailed" value="@(Model.Detailed ? "False" : "True")" type="hidden" />
-                  <button type="submit" class="btn btnWhite bg-btn">@(Model.Detailed ? "Simple View" : "Detailed View")</button>
+                  <form method="post">
+                     <input asp-for="Detailed" value="@(Model.Detailed ? "False" : "True")" type="hidden" />
+                     <button type="submit" class="btn btnWhite bg-btn">
+                        @(Model.Detailed ? "Simple View" : "Detailed View")
+                     </button>
+                  </form>
                </div>
-            </form>
+            </div>
+            
+
             @if (SignInManager.IsSignedIn(User)) {
                var user = await UserManager.GetUserAsync(User);
                if (user != null) {
@@ -109,9 +114,12 @@
                   } else {
                      <table id="dataTable" class="order-table">
                         <tr>
-                           <th>Order ID</th>
+                           <th>ID</th>
                            <th>Trainee</th>
-                           <th>Priority Level</th>
+                           <th>Begin Date</th>
+                           <th>Lesson</th>
+                           <th>Skill</th>
+                           <th>Priority</th>
                            <th></th>
                         </tr>
                         @foreach (var item in Model.TrainingOrder.Reverse()) {
@@ -120,12 +128,23 @@
                            }
                            loadVars(item);
                            <tr id="@item.Id" class="@type @item.Status searchable" data-name="@searchText">
-                              <td>@item.Id</td>
+                              <td><p class="@type dot" title="@item.Status">@item.Id ⬤</p></td>
                               @foreach (var employee in Model.Employees) {
                                  if (employee.Id == item.TraineeId) {
                                     <td>@employee.FirstName @employee.LastName</td>
                                  }
                               }
+                              <td>@item.BeginDate</td>
+                              <td>
+                                 @if (item.Lesson != null) {
+                                    @item.Lesson.Name
+                                 }
+                              </td>
+                              <td>
+                                 @if (item.ParentSkill != null) {
+                                    @item.ParentSkill.Name
+                                 }
+                              </td>
                               <td>@item.Priority</td>
                               <td>
                                  <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
