--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -13,6 +13,7 @@
 	--white2: #3b4042;
 	--red1: #ff4d4d;
 	--red2: #d81d1d;
+	--red3: #311313;
 	--blue1: #30b9ff;
 	--blue2: #007ac1;
 	--green1: #56ff64;
@@ -40,6 +41,7 @@
 	--white2: #999999;
 	--red1: #000000;
 	--red2: #999999;
+	--red3: #8d8d8d;
 	--blue1: #000000;
 	--blue2: #999999;
 	--green1: #000000;
